# data_engineering

./: README.md  pyproject.toml
src/db/: duckdb_basics.py
src/tutorial/: package_turtle.py
