[tool.poetry]
name = "data_engineering"
version = "0.1.0"
description = "Mono repo for data engineering artifacts and solutions"
authors = ["Raghav Nagaraj"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"