[tool.poetry]
name = "data_engineering"
version = "0.1.0"
description = "Mono repo for data engineering artifacts and solutions"
authors = ["Raghav Nagaraj"]
readme = "README.md"
packages = [{include = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^2.0.0"
duckdb = "^1.0.0"
geopandas = "^1.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
pyarrow = "^16.1.0"
polars = "^0.20.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"